dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/main.c)
AM_INIT_AUTOMAKE(dhsd, 1.0)
AC_PROG_MAKE_SET

dnl Checks for programs.
AC_PROG_CC
AC_ISC_POSIX

dnl Checks for libraries.

dnl Checks for header files.
AC_STDC_HEADERS

AC_ARG_ENABLE(debug,
 [  --enable-debug    Turn on debugging],
 [case "${enableval}" in
   yes) debug=true ;;
   no)  debug=false ;;
   *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
   esac],[debug=false])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)


AM_CONFIG_HEADER(src/config.h)
AC_HAVE_HEADERS(syslog.h)

AC_OUTPUT(Makefile src/Makefile scripts/Makefile)

